# sendtoteams

./: .gitignore  CLAUDE.md  README.md  setup.cfg
src/teams_webhook/: send.py
