[metadata]
name = teams-webhook
version = 0.1.0
author = Miki Yutani
author_email = mkyutani@gmail.com
description = Teams incoming webhook interface
long_description = file: README.md
keywords = msteams, teams, webhook
license = MIT License

[options]
zip_safe = False
package_dir = =src
packages = find:
install_requires =
    requests
python_requires = >=3.8

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    sendtoteams=teams_webhook.send:send